@@ -1,0 +1,7 @@
+package net.sourceforge.squirrel_sql.plugins.dataimport.gui;
+
+class ColumnMappingConstants {
+	static final int INDEX_TABLE_COLUMN = 0;
+	static final int INDEX_IMPORTFILE_COLUMN = 1;
+	static final int INDEX_FIXEDVALUE_COLUMN = 2;
+}
